--- a/tunnelto_lib/Cargo.toml
+++ b/tunnelto_lib/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "tunnelto_lib"
+authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
 description = "expose your local web server to the internet with a public url"
-version = "0.1.19"
-authors = ["Alex Grinman <alex@tunnelto.dev>"]
 edition = "2021"
 license = "MIT"
-repository = "https://github.com/agrinman/tunnelto"
+name = "tunnelto_lib"
 readme = "../README.md"
+repository = "https://github.com/agrinman/tunnelto"
+version = "0.1.20"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-rand = "0.8"
 base64 = "0.21"
+rand = "0.8"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 sha2 = "0.10"
