update base64 to 0.21 from 0.11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,10 @@
         "indicatif",
         "libhoney",
         "reqwest",
+        "rusoto",
         "rustls",
         "spki",
+        "thiserror",
         "tunnelto",
         "webpki"
     ]
