--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "libhoney",
         "reqwest",
         "rusoto",
+        "rusqlite",
         "rustls",
         "spki",
         "thiserror",
