--- a/tunnelto_server/Cargo.toml
+++ b/tunnelto_server/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/main.rs"
 [dependencies]
 async-trait = "0.1.50"
 base64 = "0.21.0"
-chrono = "0.4.11"
+chrono = {version = "0.4.11", features = ["serde"]}
 dashmap = "5.5"
 futures = "0.3"
 hex = "0.4.3"
@@ -38,8 +38,3 @@ warp = "0.3"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-# auth handler
-rusoto_core = "0.46"
-rusoto_credential = "0.46"
-rusoto_dynamodb = "0.46"
