fix some warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "askama",
         "chrono",
         "dashmap",
+        "hmac",
         "httparse",
         "indicatif",
         "libhoney",
