--- a/tunnelto_server/Cargo.toml
+++ b/tunnelto_server/Cargo.toml
@@ -13,6 +13,8 @@ name = "tunnelto_server"
 path = "src/main.rs"
 
 [dependencies]
+tunnelto_lib = {path = "../tunnelto_lib"}
+
 async-trait = "0.1.50"
 base64 = "0.21.0"
 chrono = {version = "0.4.11", features = ["serde"]}
@@ -25,16 +27,17 @@ lazy_static = "1.4.0"
 pretty_env_logger = "0.5"
 rand = "0.8"
 reqwest = {version = "0.11.2", features = ["json"]}
-serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
 sha2 = "0.10"
 thiserror = "1.0"
 tokio = {version = "1.0", features = ["full"]}
 trust-dns-resolver = "0.23"
-tunnelto_lib = {path = "../tunnelto_lib"}
 url = "2.1.1"
 uuid = {version = "1.6", features = ["serde", "v4"]}
 warp = "0.3"
+
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+toml = "0.8"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
