--- a/tunnelto_server/Cargo.toml
+++ b/tunnelto_server/Cargo.toml
@@ -18,6 +18,7 @@ tunnelto_lib = {path = "../tunnelto_lib"}
 async-trait = "0.1.50"
 base64 = "0.21.0"
 chrono = {version = "0.4.11", features = ["serde"]}
+clap = {version = "4.4", features = ["derive"]}
 dashmap = "5.5"
 futures = "0.3"
 hex = "0.4.3"
