--- a/.github/workflows/publish_crate.yml
+++ b/.github/workflows/publish_crate.yml
@@ -18,6 +18,6 @@ jobs:
           toolchain: stable
           override: true
           
-      - run: cd tunnelto_lib && cargo publish --token "${{ secrets.CARGO_REGISTRY_TOKEN }}"
-      - run: cd tunnelto && cargo publish --token "${{ secrets.CARGO_REGISTRY_TOKEN }}"
+      - run: cd portal_lib && cargo publish --token "${{ secrets.CARGO_REGISTRY_TOKEN }}"
+      - run: cd portal && cargo publish --token "${{ secrets.CARGO_REGISTRY_TOKEN }}"
 
