refactor(agent): use clap instead of structopt as cli

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "dashmap",
         "hmac",
         "httparse",
+        "illusiontech",
         "indicatif",
         "libhoney",
         "reqwest",
