--- a/portal/Cargo.toml
+++ b/portal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 authors = ["Alex Grinman <alex@tunnelto.dev>", "Wang Zishi <wangzishi@illustiontech.cn>"]
-description = "expose your local web server to the internet with a public url"
+description = "Expose your local web server to the Internet with a public url."
 edition = "2021"
 license = "MIT"
 name = "portal"
@@ -18,6 +18,7 @@ portal_lib = {path = "../portal_lib"}
 askama = {version = "0.12", features = ["serde-json"]}
 bytes = "1.0"
 chrono = "0.4.11"
+clap = {version = "4.4", features = ["derive"]}
 cli-table = "0.4"
 colored = "2.0"
 dirs = "5.0"
@@ -35,7 +36,6 @@ semver = "1.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 serde_urlencoded = "0.7"
-structopt = "0.3.12"
 thiserror = "1.0"
 tokio = {version = "1.0", features = ["full"]}
 tokio-rustls = "0.25.0"
