--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,15 @@
         "tungstenite",
         "tunnelto",
         "webpki"
-    ]
+    ],
+    "rust-analyzer.hover.actions.references.enable": true,
+    "rust-analyzer.semanticHighlighting.operator.specialization.enable": true,
+    "rust-analyzer.semanticHighlighting.punctuation.enable": true,
+    "rust-analyzer.semanticHighlighting.punctuation.separate.macro.bang": true,
+    "rust-analyzer.semanticHighlighting.punctuation.specialization.enable": true,
+    "rust-analyzer.lens.references.adt.enable": true,
+    "rust-analyzer.lens.references.enumVariant.enable": true,
+    "rust-analyzer.lens.references.method.enable": true,
+    "rust-analyzer.lens.references.trait.enable": true,
+    "rust-analyzer.inlayHints.bindingModeHints.enable": true
 }
