--- a/portal/Cargo.toml
+++ b/portal/Cargo.toml
@@ -33,9 +33,6 @@ log = "0.4.8"
 pretty_env_logger = "0.5"
 reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 semver = "1.0"
-serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
-serde_urlencoded = "0.7"
 thiserror = "1.0"
 tokio = {version = "1.0", features = ["full"]}
 tokio-rustls = "0.25.0"
@@ -45,3 +42,8 @@ uuid = {version = "1.6", features = ["serde", "v4"]}
 warp = "0.3"
 webpki = "0.22"
 webpki-roots = "0.26.0"
+
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+serde_urlencoded = "0.7"
+toml = "0.8"
