test: update test config files

--- a/portal_server/tests/config.toml
+++ b/portal_server/tests/config.toml
@@ -1,6 +1,6 @@
 allowed_hosts = [
   'localhost',
-  'illusiontech.cn',
+  'portal.illusiontech.cn',
 ]
 
-portal_host = 'localhost'
+portal_host = 'portal.illusiontech.cn'
