--- a/portal_server/Cargo.toml
+++ b/portal_server/Cargo.toml
@@ -26,7 +26,7 @@ hmac-sha256 = "1"
 httparse = "1"
 pretty_env_logger = "0.5"
 rand = "0.8"
-reqwest = {version = "0.11", features = ["json"]}
+reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls"]}
 sha2 = "0.10"
 thiserror = "1"
 tokio = {version = "1", features = ["full"]}
