--- a/portal/tests/config.toml
+++ b/portal/tests/config.toml
@@ -1,8 +1,13 @@
 sub_domain = 'test'
-portal_host = 'portal.illusiontech.cn'
-portal_port = 5000
+#portal_host = 'portal.illusiontech.cn'
+#portal_port = 5000
 portal_tls = false
 local_host = 'localhost'
 local_port = 8000
 local_tls = false
 verbose = true
+
+
+is_exit = true
+health_check_interval = 60
+enable_health_check = false
