--- a/portal_server/Cargo.toml
+++ b/portal_server/Cargo.toml
@@ -12,6 +12,14 @@ version = "0.1.20"
 name = "portal_server"
 path = "src/main.rs"
 
+[[bin]]
+name = "tcp_echo_server"
+path = "src/bin/tcp_echo_server.rs"
+
+[[bench]]
+name = "echo_server_bench"
+harness = false
+
 [dependencies]
 portal_lib = {path = "../portal_lib"}
 
@@ -41,3 +49,6 @@ toml = "0.8"
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+[dev-dependencies]
+criterion = "0.5"
