fix: Removed the operation to get the host from the headers and Use TCP to complete multi-protocol forwarding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 members = [
     "portal_lib",
     "portal",
-    "portal_server",
+    "portal_server", "portal_tcp",
 ]
 
 exclude = [
