test(lib): add tests and comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "illusiontech",
         "indicatif",
         "libhoney",
+        "mapref",
         "reqwest",
         "rusoto",
         "rusqlite",
