--- a/portal_lib/Cargo.toml
+++ b/portal_lib/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.20"
 
 [dependencies]
 base64 = "0.22"
+derive_builder = "0.20"
 rand = "0.8"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
