--- a/portal_lib/Cargo.toml
+++ b/portal_lib/Cargo.toml
@@ -12,6 +12,7 @@ version = "0.1.20"
 base64 = "0.22"
 derive_builder = "0.20"
 rand = "0.8"
-serde = {version = "1.0", features = ["derive"]}
-serde_json = "1.0"
+semver = {version = "1", features = ["serde"]}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
 sha2 = "0.10"
