--- a/portal_lib/Cargo.toml
+++ b/portal_lib/Cargo.toml
@@ -16,3 +16,4 @@ semver = {version = "1", features = ["serde"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 sha2 = "0.10"
+uuid = {version = "1.8.0", features = ["serde", "v4", "fast-rng"]}
